# clldutils

./: .coveragerc  .gitignore  .travis.yml  CHANGES.md  CONTRIBUTING.md  MANIFEST.in  README.md  README.rst  RELEASING.md  RELEASING.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml
clldutils/: __init__.py  apilib.py  attrlib.py  badge.py  clilib.py  declenum.py  dsv.py  dsv_metadata.py  inifile.py  iso_639_3.py  jsonlib.py  lgr.py  licenses.py  loglib.py  markup.py  misc.py  path.py  sfm.py  source.py  test_lgr.py  testing.py  text.py  ziparchive.py
clldutils/csvw/: datatypes.py  metadata.py
clldutils/tests/: test_apilib.py  test_badge.py  test_clilib.py  test_csvw_datatypes.py  test_csvw_metadata.py  test_declenum.py  test_dsv.py  test_dsv_metadata.py  test_inifile.py  test_iso_639_3.py  test_jsonlib.py  test_licenses.py  test_loglib.py  test_markup.py  test_misc.py  test_path.py  test_sfm.py  test_source.py  test_testing.py  test_text.py  test_ziparchive.py
clldutils/tests/fixtures/: csv.txt-metadata.json  test.sfm
docs/: apilib.rst  attrlib.rst  badge.rst  clilib.rst  color.rst  conf.py  coordinates.rst  db.rst  index.rst  inifile.rst  iso_639_3.rst  jsonlib.rst  loglib.rst  markup.rst  metadata.rst  misc.rst  oaipmh.rst  path.rst  sfm.rst  source.rst  svg.rst  text.rst
src/clldutils/: __init__.py  _compat.py  apilib.py  attrlib.py  badge.py  clilib.py  color.py  coordinates.py  db.py  declenum.py  dsv.py  fonts.py  html.py  inifile.py  iso_639_3.py  jsonlib.py  lgr.py  licenses.py  loglib.py  markup.py  metadata.py  misc.py  oaipmh.py  paginate.py  path.py  sfm.py  source.py  svg.py  text.py  ziparchive.py
tests/: conftest.py  test_apilib.py  test_attrlib.py  test_badge.py  test_clilib.py  test_color.py  test_coordinates.py  test_db.py  test_declenum.py  test_fonts.py  test_html.py  test_inifile.py  test_iso_639_3.py  test_jsonlib.py  test_lgr.py  test_licenses.py  test_loglib.py  test_markup.py  test_metadata.py  test_misc.py  test_oaipmh.py  test_paginate.py  test_path.py  test_sfm.py  test_source.py  test_svg.py  test_text.py  test_ziparchive.py
tests/fixtures/: oaipmh.xml  oaipmh_no_rt.xml
tests/fixtures/commands/: cmd.py
tests/fixtures/problematic_commands/: cmd.py
