[metadata]
license_file = LICENSE

[easy_install]
zip_ok = false

[bdist_wheel]
universal = 1

[flake8]
ignore = E711,E712,D100,D101,D103,D102,D301
max-line-length = 100
exclude = .tox

[tool:pytest]
minversion = 3.1
testpaths = tests
addopts =
    --cov
    --cov-report=term
mock_use_standalone_module = true

[coverage:run]
source = clldutils

[coverage:report]
exclude_lines =
    if self.debug:
    pragma: no cover
    raise NotImplementedError
    if __name__ == .__main__.:
ignore_errors = True
omit =
    tests/*
show_missing = true
